* fix align on Safari

--- a/css/buttonarray.css
+++ b/css/buttonarray.css
@@ -7,6 +7,7 @@
 }
 
 .as-button-array-item {
+    text-align: center;
     font-size: inherit;
     height: 2em;
     border: none;
@@ -18,6 +19,7 @@
     background-color: white;
     border-radius: 0;
     transition: background-color 0.1s, color 0.1s;
+    margin: 0;
 }
 
 .as-button-array-item:not(:first-child) {
